Rename Admin directory to admin-curve for better project organization

--- a/admin-curve/Dockerfile
+++ b/admin-curve/Dockerfile
@@ -1,25 +1,25 @@
-# Use Node.js 18 Alpine for smaller image size
+# Admin Curve Tool - Multi-stage Docker build
+# Stage 1: Build the React application
 FROM node:18-alpine AS builder
 
-# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install ALL dependencies (including dev dependencies for build)
+# Install all dependencies (including dev dependencies for build)
 RUN npm ci
 
 # Copy source code
 COPY . .
 
-# Build the app
+# Build the application
 RUN npm run build
 
-# Production stage
+# Stage 2: Production runtime
 FROM nginx:alpine
 
-# Copy built app from builder stage
+# Copy built application from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Copy nginx configuration
