Update frontend with simplified coordinate noise system - replace complex distortion UI with universal coordinate noise controls for all curve types

--- a/cnidaria-admin-curve/nginx.conf
+++ b/cnidaria-admin-curve/nginx.conf
@@ -1,5 +1,5 @@
-# Nginx configuration for Cnidaria Admin Curve Tool
-# Optimized for React SPA with performance and security headers
+# Admin Curve Tool - Nginx Configuration
+# Optimized for React SPA with caching and security headers
 
 events {
     worker_connections 1024;
@@ -8,6 +8,14 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+
+    # Logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
 
     # Performance optimizations
     sendfile on;
@@ -27,44 +35,43 @@ http {
         text/css
         text/xml
         text/javascript
-        application/json
         application/javascript
         application/xml+rss
-        application/atom+xml
-        image/svg+xml;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://us-central1-cnidaria-api.cloudfunctions.net;" always;
+        application/json;
 
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
         root /usr/share/nginx/html;
         index index.html;
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+
+        # Cache static assets
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Vary "Accept-Encoding";
+        }
+
+        # Handle React Router (SPA)
+        location / {
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
 
         # Health check endpoint
         location /health {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
-        }
-
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # SPA routing - serve index.html for all routes
-        location / {
-            try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
         }
 
         # Error pages
