--- a/cnidaria-admin-curve/Dockerfile
+++ b/cnidaria-admin-curve/Dockerfile
@@ -25,8 +25,8 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Copy Nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Expose port 80
-EXPOSE 80
+# Expose port 8080 for Cloud Run
+EXPOSE 8080
 
 # Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
