--- a/cnidaria-admin-curve/package.json
+++ b/cnidaria-admin-curve/package.json
@@ -6,7 +6,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy:dev": "./deploy-cloudrun-dev.sh",
+    "deploy:stage": "./deploy-cloudrun-stage.sh",
+    "deploy:prod": "./deploy-cloudrun-prod.sh",
+    "deploy": "npm run deploy:dev",
+    "cloud-run:status": "gcloud run services list --region=us-central1",
+    "cloud-run:logs:dev": "gcloud run services logs read cnidaria-admin-curves-dev --region=us-central1",
+    "cloud-run:logs:stage": "gcloud run services logs read cnidaria-admin-curves-stage --region=us-central1",
+    "cloud-run:logs:prod": "gcloud run services logs read cnidaria-admin-curves-prod --region=us-central1"
   },
   "dependencies": {
     "node-fetch": "^3.3.2",
