--- a/cnidaria-admin-curve/package.json
+++ b/cnidaria-admin-curve/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
