--- a/cnidaria-admin-curve/package.json
+++ b/cnidaria-admin-curve/package.json
@@ -2,6 +2,10 @@
   "name": "cnidaria-admin-curve",
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
