--- a/cnidaria-admin-curve/cloudbuild-dev.yaml
+++ b/cnidaria-admin-curve/cloudbuild-dev.yaml
@@ -2,7 +2,7 @@ steps:
   # Build the React app
   - name: 'node:20'
     entrypoint: 'npm'
-    args: ['ci']
+    args: ['install']
   
   - name: 'node:20'
     entrypoint: 'npm'
