--- a/cnidaria-admin-curve/cloudbuild-prod.yaml
+++ b/cnidaria-admin-curve/cloudbuild-prod.yaml
@@ -2,7 +2,7 @@ steps:
   # Build the React app for production
   - name: 'node:20'
     entrypoint: 'npm'
-    args: ['ci']
+    args: ['install']
   
   - name: 'node:20'
     entrypoint: 'npm'
