Fix Dockerfile for Node 20 and Rollup compatibility
- Switch from node:20-alpine to node:20 to avoid musl library issues
- Use npm install instead of --only=production to include dev dependencies needed for build
- This fixes the @rollup/rollup-linux-x64-musl missing module error

--- a/cnidaria-admin-curve/Dockerfile
+++ b/cnidaria-admin-curve/Dockerfile
@@ -1,14 +1,14 @@
 # Multi-stage build for Cnidaria Admin Curve Tool
 # Stage 1: Build the React application
-FROM node:20-alpine as build
+FROM node:20 as build
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install --only=production
+# Install dependencies (including dev dependencies for build)
+RUN npm install
 
 # Copy source code
 COPY . .
