--- a/cnidaria-admin-curve/package.json
+++ b/cnidaria-admin-curve/package.json
@@ -21,12 +21,10 @@
     "cloud-run:logs:prod": "gcloud run services logs read cnidaria-admin-curves-prod --region=us-central1"
   },
   "dependencies": {
-    "@types/three": "^0.179.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2",
-    "three": "^0.179.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
