--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "clean": "rm -rf node_modules/.vite .vite dist .cache",
+    "clean:all": "rm -rf node_modules package-lock.json && npm install",
     "deploy:dev": "./deploy-cloudrun-dev.sh",
     "deploy:stage": "./deploy-cloudrun-stage.sh",
     "deploy:prod": "./deploy-cloudrun-prod.sh",
