--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --open",
+    "dev:no-open": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite preview --open",
     "clean": "rm -rf node_modules/.vite .vite dist .cache",
     "clean:all": "rm -rf node_modules package-lock.json && npm install",
     "deploy:dev": "./deploy-cloudrun-dev.sh",
