--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node
+node_modules
+.pnpm-store
+dist
+.vite
+
+# Logs
+*.log
+
+# System
+.DS_Store
+
+# Env
+.env
+.env.local
