--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-   
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "deploy:dev": "./deploy-cloudrun-dev.sh",
     "deploy:stage": "./deploy-cloudrun-stage.sh",
     "deploy:prod": "./deploy-cloudrun-prod.sh",
@@ -23,7 +22,8 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "upng-js": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
