feat(auth): Firebase Auth + protected routes + login UI; header avatar/logout; add Config & Control scaffold; fix login redirect flow

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloud-run:logs:prod": "gcloud run services logs read cnidaria-admin-curves-prod --region=us-central1"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
