feat(dev): comprehensive system analysis and automation setup
- Added comprehensive curve processing pipeline critiques and implementation plan
- Implemented automated semantic versioning with GitHub Actions and pnpm
- Enhanced login screen with runic text effects and WebGPU compatibility
- Added unified coordinate processing architecture documentation
- Created version management scripts and workflows
- Updated routing and authentication flow
- Added RunicText component with sequential character transformation
- Standardized styling across ConfigControl and CurveBuilder pages

Major additions:
- CRITIQUE_1_CURVE_PROCESSING_PIPELINE.md: Detailed pipeline analysis
- IMPLEMENTATION_PLAN_UNIFIED_PIPELINE.md: 4-phase unification strategy
- .github/workflows/: Automated versioning workflows
- scripts/version-bump.js: Local version management
- src/components/RunicText.*: Animated text transformation
- VERSIONING.md: Complete versioning documentation

This commit establishes foundation for unified WebGPU processing architecture
and automated development workflows.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "cloud-run:status": "gcloud run services list --region=us-central1",
     "cloud-run:logs:dev": "gcloud run services logs read cnidaria-admin-curves-dev --region=us-central1",
     "cloud-run:logs:stage": "gcloud run services logs read cnidaria-admin-curves-stage --region=us-central1",
-    "cloud-run:logs:prod": "gcloud run services logs read cnidaria-admin-curves-prod --region=us-central1"
+    "cloud-run:logs:prod": "gcloud run services logs read cnidaria-admin-curves-prod --region=us-central1",
+    "version:patch": "pnpm version patch --no-git-tag-version",
+    "version:minor": "pnpm version minor --no-git-tag-version",
+    "version:major": "pnpm version major --no-git-tag-version",
+    "version:check": "echo $npm_package_version",
+    "version:current": "node -p \"require('./package.json').version\"",
+    "version:bump": "node scripts/version-bump.js",
+    "version:auto": "node scripts/version-bump.js --auto"
   },
   "dependencies": {
     "firebase": "^12.2.1",
