Implement Babylon.js foundation with geometry switching and vertex controls
🎮 BABYLON.JS MIGRATION:
- Installed Babylon.js packages (core, materials, loaders, gui, node-editor, inspector)
- Replaced Three.js scene with Babylon.js WebGPU/WebGL engine
- WebGPU-first approach with WebGL fallback

🔺 GEOMETRY CONTROLS:
- Sphere, Cube, Landscape-box (10x3x10 ratio) switching
- Vertex count slider (4-128 subdivisions)
- Real-time vertex count display
- Isometric camera view (ArcRotateCamera)

🎯 FEATURES IMPLEMENTED:
- WebGPU engine initialization with fallback
- Dynamic geometry creation and switching
- Vertex count control with live updates
- Clean disposal and recreation of meshes
- Isometric camera with mouse controls

📚 RESEARCH DOCUMENTED:
- Babylon.js compute shader capabilities
- Node Material Editor UI patterns for future implementation
- GPU-accelerated procedural texture roadmap

READY: Basic Babylon.js scene with geometry controls
NEXT: Implement Pipeline F as Babylon.js procedural textures

--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "version:auto": "node scripts/version-bump.js --auto"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.26.0",
+    "@babylonjs/gui": "^8.26.0",
+    "@babylonjs/inspector": "^8.26.0",
+    "@babylonjs/loaders": "^8.26.0",
+    "@babylonjs/materials": "^8.26.0",
+    "@babylonjs/node-editor": "^8.26.0",
     "firebase": "^12.2.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
